# Low-precision-raytracer

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  imgui.ini
rt/: CMakeLists.txt  app.manifest  main.cu
rt/gui/: controller.hpp  imgui_window.cu  imgui_window.hpp
rt/math/: matrix.hpp  number.hpp
rt/rtrt/: bsdf.hpp  cuda.hpp  gl_shader.cpp  gl_shader.hpp  hierarchy.hpp  loader.cu  loader.hpp  memory.hpp  render.hpp  svgf.hpp
rt/trace/: object_bvh.hpp  scene_bvh.hpp
rt/utils/: cu_exception.cu  exception.hpp  gldebug.cpp  gldebug.hpp  log.hpp
